// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54361,
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 59814,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 289450,
}
`;

exports[`PoolManager #mint gas cost with ETH 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 253510,
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 293873,
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87491,
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 227200,
}
`;

exports[`PoolManager #swap gas cost for swap with ETH against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 204917,
}
`;

exports[`PoolManager #swap gas cost with ETH 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87299,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87520,
}
`;

exports[`PoolManager bytecode size 1`] = `27041`;
